--- a/metadata.yml
+++ b/metadata.yml
@@ -1,10 +1,8 @@
 ---
 :id: 57356851
 :submitters:
-- :name: AYUSH KUMAR MALL
-  :email: ayushmall06@gmail.com
-- :name: MUNEEB AHMAD SHEIKH
-  :email: sheikhmuneeb433@gmail.com
+- :name: Hrishikesh Tiwari
+  :email: hrishikeshtiwari98@gmail.com
 :created_at: !ruby/object:ActiveSupport::TimeWithZone
   utc: 2020-11-27 14:29:57.665391000 Z
   zone: !ruby/object:ActiveSupport::TimeZone
